// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ButtonIcon/> should have the right class names 1`] = `
<button
  aria-haspopup={false}
  className="slds-align_absolute-center slds-button slds-button_icon"
  data-id="button-icon-element"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  style={Object {}}
  type="button"
/>
`;

exports[`<ButtonIcon/> should have the right class names when variant is base and size is large 1`] = `
<button
  aria-haspopup={false}
  className="slds-align_absolute-center slds-button slds-button_icon"
  data-id="button-icon-element"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  style={Object {}}
  type="button"
>
  <svg
    aria-hidden={true}
    className="slds-button__icon slds-button__icon_large"
    style={Object {}}
  >
    <use
      xlinkHref="/icons/utility-sprite/svg/symbols.svg#activity"
      xmlnsXlink="http://www.w3.org/1999/xlink"
    />
  </svg>
</button>
`;

exports[`<ButtonIcon/> should have the right class names when variant is base and size is medium 1`] = `
<button
  aria-haspopup={false}
  className="slds-align_absolute-center slds-button slds-button_icon"
  data-id="button-icon-element"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  style={Object {}}
  type="button"
>
  <svg
    aria-hidden={true}
    className="slds-button__icon"
    style={Object {}}
  >
    <use
      xlinkHref="/icons/utility-sprite/svg/symbols.svg#activity"
      xmlnsXlink="http://www.w3.org/1999/xlink"
    />
  </svg>
</button>
`;

exports[`<ButtonIcon/> should have the right class names when variant is base and size is small 1`] = `
<button
  aria-haspopup={false}
  className="slds-align_absolute-center slds-button slds-button_icon"
  data-id="button-icon-element"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  style={Object {}}
  type="button"
>
  <svg
    aria-hidden={true}
    className="slds-button__icon slds-button__icon_small"
    style={Object {}}
  >
    <use
      xlinkHref="/icons/utility-sprite/svg/symbols.svg#activity"
      xmlnsXlink="http://www.w3.org/1999/xlink"
    />
  </svg>
</button>
`;

exports[`<ButtonIcon/> should have the right class names when variant is base and size is x-small 1`] = `
<button
  aria-haspopup={false}
  className="slds-align_absolute-center slds-button slds-button_icon"
  data-id="button-icon-element"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  style={Object {}}
  type="button"
>
  <svg
    aria-hidden={true}
    className="slds-button__icon slds-button__icon_x-small"
    style={Object {}}
  >
    <use
      xlinkHref="/icons/utility-sprite/svg/symbols.svg#activity"
      xmlnsXlink="http://www.w3.org/1999/xlink"
    />
  </svg>
</button>
`;

exports[`<ButtonIcon/> should have the right class names when variant is base and size is xx-small 1`] = `
<button
  aria-haspopup={false}
  className="slds-align_absolute-center slds-button slds-button_icon"
  data-id="button-icon-element"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  style={Object {}}
  type="button"
>
  <svg
    aria-hidden={true}
    className="slds-button__icon slds-button__icon_x-small"
    style={Object {}}
  >
    <use
      xlinkHref="/icons/utility-sprite/svg/symbols.svg#activity"
      xmlnsXlink="http://www.w3.org/1999/xlink"
    />
  </svg>
</button>
`;

exports[`<ButtonIcon/> should have the right class names when variant is border and size is x-small 1`] = `
<button
  aria-haspopup={false}
  className="slds-align_absolute-center slds-button slds-button_icon slds-button_icon-border slds-button_icon-x-small"
  data-id="button-icon-element"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  style={Object {}}
  type="button"
/>
`;

exports[`<ButtonIcon/> should have the right class names when variant is border-filled and have a custom class 1`] = `
<button
  aria-haspopup={false}
  className="slds-align_absolute-center slds-button slds-button_icon slds-button_icon-border-filled my-custom-class-name"
  data-id="button-icon-element"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  style={Object {}}
  type="button"
/>
`;

exports[`<ButtonIcon/> should have the right class names when variant is border-inverse and size is small 1`] = `
<button
  aria-haspopup={false}
  className="slds-align_absolute-center slds-button slds-button_icon slds-button_icon-border-inverse slds-button_icon-small"
  data-id="button-icon-element"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  style={Object {}}
  type="button"
/>
`;

exports[`<ButtonIcon/> should have the right class names when variant is brand and size is xx-small 1`] = `
<button
  aria-haspopup={false}
  className="slds-align_absolute-center slds-button slds-button_icon slds-button_icon-brand slds-button_icon-xx-small"
  data-id="button-icon-element"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  style={Object {}}
  type="button"
/>
`;

exports[`<ButtonIcon/> should have the right class names when variant is container 1`] = `
<button
  aria-haspopup={false}
  className="slds-align_absolute-center slds-button slds-button_icon slds-button_icon-container"
  data-id="button-icon-element"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  style={Object {}}
  type="button"
/>
`;

exports[`<ButtonIcon/> should have the right class names when variant is inverse and size is large 1`] = `
<button
  aria-haspopup={false}
  className="slds-align_absolute-center slds-button slds-button_icon slds-button_icon-inverse"
  data-id="button-icon-element"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  style={Object {}}
  type="button"
/>
`;
